# raspberry-pi-pico-sdk-docker

./: .clang-format  CMakeLists.txt  Dockerfile.PicoSdk  Makefile  docker-compose.yml  entrypoint.sh  main.c  readme.md
example/: CMakeLists.txt  Makefile  flash_linux.sh  main.c  stdout_usb_linux.sh
scripts/: flash_linux.sh
